# monitor_tui_log

./: .gitignore  CMakeLists.txt  README.md  log.txt  log2.txt  main.cpp
Model/DialogComponent/include/: DialogComponent.hpp
Model/DialogComponent/src/: DialogComponent.cpp
Model/HMenu/include/: HMenu.hpp
Model/HMenu/src/: HMenu.cpp
Model/Json/include/: button.hpp  expander.hpp  json.hpp  mytoggle.hpp
Model/Json/src/: button.cpp  expander.cpp  json.cpp  mytoggle.cpp
Model/JsonParser/include/: getJson.hpp
Model/JsonParser/src/: getJson.cpp
Model/LogItem/include/: LogItem.hpp
Model/LogItem/src/: LogItem.cpp
Model/LogValidator/include/: LogValidator.hpp
Model/LogValidator/src/: LogValidator.cpp
Model/MainWindow/include/: MainWindow.h
Model/MainWindow/src/: MainWindow.cpp
Model/MyCollapsible/include/: MyCollapsible.hpp
Model/MyCollapsible/src/: MyCollapsible.cpp
Model/TabController/include/: TabController.hpp
Model/TabController/src/: TabController.cpp
log_monitor/: CMakeLists.txt
